# etl_project_bank

./: Banks.db  README.md  banks_project.py  code_log.txt  pyproject.toml
